# comfy-org-file-server-cli

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  build.toml  rustfmt.toml
.github/workflows/: build.yml
scripts/: build.ps1  build.sh
src/: browser.rs  config.rs  connection.rs  download.rs  lib.rs  main.rs  utils.rs
src/client/: ftp.rs  mod.rs  smb.rs
tests/: integration_test.rs  upload_download_test.rs
tests/common/: mod.rs
tests/integration/: browser_test.rs
