[package]
name = "comfy-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies with working versions
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File transfer and utilities
suppaftp = "*"
async-trait = "*"
indicatif = "*"
directories = "*"
human_bytes = "*"
futures = "*"

# SMB support - using subprocess approach for now

# Security - for password input
rpassword = "*"

[dev-dependencies]
tempfile = "*"
mockall = "*"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false